<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.reverie.naukrihack.Faq">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/faqHead"
            android:text="Frequently\nAsked\nQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp" />
        <TextView
            android:id="@+id/faqInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faqInfo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q1"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q2"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q3"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q4"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q5"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q6"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a6"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q7"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q8"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a8"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q9"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a9"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q10"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a10"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q11"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a11"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q12"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a12"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q13"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a13"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q14"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a14"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffcccccc"/>

        <TextView
            android:id="@+id/faq_q15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q15"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/faq_a15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a15"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>
</ScrollView>
